--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,15 @@
 /* Estilos CSS para el formulario */
-body {
+body {background-image: url('../back\ graun.jpg');
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    
+    color: #630606;
     margin: 0;
     padding: 0;
 }
 
 header, footer {
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: #d42b0d9a;
+    color: #270101c2;
     padding: 20px;
 }
 
@@ -57,7 +57,7 @@ select {
     width: 100%;
     margin-bottom: 15px;
     padding: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid #0b0d69;
     border-radius: 4px;
     font-size: 16px;
     font-family: sans-serif;
@@ -66,8 +66,8 @@ select {
 
 input[type="submit"],
 input[type="button"] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #034905;
+    color: rgb(95, 44, 44);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -78,7 +78,7 @@ input[type="button"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #3e8e41;
+    background-color: #6b756b;
 }
 
 span {
@@ -98,8 +98,8 @@ th,
 td {
     padding: 10px;
     text-align: center;
-    border: 5px solid #4CAF50;
-    background-color: #4CAF50;
+    border: 5px solid #db0d0d;
+    background-color: #ca1717;
 
 
 }
@@ -127,7 +127,7 @@ a{
     text-decoration: none;
 }
 .listado-servicios a {
-    color: #3e8e41;
+    color: #0e7f9b;
     font-size: 20px;
 }
 
